# backup-juggler

./: .readthedocs.yml  CHANGELOG.md  README.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation-issue.md  feature_request.md
.github/workflows/: pipeline.yml
backup_juggler/: files_manager.py  juggler_cli.py  paths_manager.py  progress_viewer.py
docs/: contribute.md  index.md  tutorial.md
docs/api/: files_manager.md  paths_manager.md  progress_viewer.md
docs/stylesheets/: extra.css
docs/templates/: cards.html  instalation.md
tests/: fixtures_cli.py  fixtures_temp.py  test_cli.py  test_juggler.py
